--- a/templates/index.html
+++ b/templates/index.html
@@ -66,12 +66,16 @@
                             </div>
                             <div class="mb-3">
                                 <label for="categoria" class="form-label">Selecciona una categoría:</label>
-                                <select class="form-select" id="categoria" name="contenido_categoria">
+                                <select class="form-select" id="categoria" name="contenido_categoria" style="float: right;">
                                     <option>Casa</option>
                                     <option>Escuela</option>
                                     <option>Trabajo</option>
                                     <option>Otro</option>
                                 </select>
+                                <div class="form">
+                                    <label for="fecha_limite">Fecha Límite:</label>
+                                    <input type="date" name="fecha_limite" required style="float: right;">
+                                </div>
                             </div>
                             <button type="submit" class="btn btn-primary btn-block"> <!-- btn-block hace que el botón ocupe todo el ancho -->
                                 Guardar
@@ -94,6 +98,12 @@
                                         </svg>
                                     </a>
 
+                                    <a href="/editar/{{tarea.id}}" style="text-decoration:none">
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" fill="#1859af" class="bi bi-pencil" viewBox="0 0 16 16">
+                                            <path d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168zM11.207 2.5 13.5 4.793 14.793 3.5 12.5 1.207zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293zm-9.761 5.175-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325"/>
+                                        </svg>
+                                    </a>
+
                                     <a href="/eliminar-tarea/{{tarea.id}}" style="text-decoration:none">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" fill="red" class="bi bi-trash" viewBox="0 0 16 16">
                                             <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5m3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0z"/>
@@ -101,16 +111,12 @@
                                         </svg>
                                     </a>
 
-                                    <a href="/editar/{{tarea.id}}" style="text-decoration:none">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="2em" height="2em" fill="#1859af" class="bi bi-pencil-square" viewBox="0 0 16 16">
-                                            <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                                            <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
-                                        </svg>
-                                    </a>
                                 </div>
                             </li>
                             {% endfor %}
-                            <a class="btn btn-primary btn-block" href="/eliminar-todas-tareas" role="button">Eliminar todas las tareas pendientes</a>
+                            <a class="btn btn-primary btn-block" href="/visualizar" role="button" style="margin-top: 20px;">Ver todas las tareas pendientes</a>
+                            <a class="btn btn-primary btn-block" href="/eliminar-todas-tareas" role="button" style="margin-top: 20px;">Eliminar todas las tareas pendientes</a>
+
                         </ul>
                     </div>
                 </div>
