--- a/templates/editar.html
+++ b/templates/editar.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Editar Tarea</title>
+    <title>Gestor de Tareas</title>
     <!-- Hoja de estilo propia -->
     <link rel="stylesheet" href="{{ url_for('static', filename= 'main.css') }}">
 
@@ -30,7 +30,6 @@
             border-color: #240b36; /* Cambia el borde del botón primario en hover */
         }
 
-
         .form-buttons {
             display: flex;
             flex-direction: column;
@@ -44,7 +43,7 @@
 </head>
 <body>
     <main class="container p-4">
-        <h1 class="display-4 text-center mt-4 titulo">Editar Tarea</h1>
+        <h1 class="display-4 text-center mt-4 titulo">GESTIÓN DE TAREAS</h1>
         <div class="row">
             <div class="col-md-4 offset-md-4 my-auto">
                 <div class="card">
